--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
+        <section class="total-price"><p id="cart_price">0.00</p></section>
       </section>
     </section>
   </body>
