--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
-        <ol class="cart__items"></ol>
-        <section class="total-price"><p id="cart_price">0.00</p></section>
+        <ol class="cart__items"></ol> Preço total
+        <p class="total-price"><p id="cart_price">0.00</p></p>
       </section>
     </section>
   </body>
